--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,48 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f0f0;
@@ -7,10 +52,14 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100vh;
+  padding: 20px 10px;
 }
 
 h1 {
   color: #333;
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 button {
@@ -28,4 +77,26 @@ button:hover {
 }
 
 
-
+#jokeList {
+  margin-top: 20px;
+  width: 800px;
+  
+}
+#jokeList li {
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  font-size: 16px;
+  /* font-weight:bold;  */
+  background-color: white;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  margin: 20px 0;
+}
+#jokeList li button {
+  margin-top: 24px;
+  background-color: red;
+}
